# controllers/feed.go
@@ -2,18 +2,20 @@ package controllers
 
 import (
 	"math/rand"
+	"strconv"
+
 	"pinterest-clone/models"
 	"pinterest-clone/resources"
-	"strconv"
+	"pinterest-clone/restapi/operations/pinterest"
 )
 
 // HandleFeedCall handles the /feed request, returns a random array of pins
-func HandleFeedCall() (feed []*models.Pin, err error) {
-	pins := resources.Pins{}
-	return handleFeedCall(pins)
+func HandleFeedCall(params pinterest.FeedParams) (feed []*models.Pin, err error) {
+	pins := &resources.Pins{}
+	return handleFeedCall(pins, params)
 }
 
-func handleFeedCall(p resources.PinsInterface) (feed []*models.Pin, err error) {
+func handleFeedCall(p resources.PinsInterface, params pinterest.FeedParams) (feed []*models.Pin, err error) {
 	var pins resources.Pins
 	for i := 1; i < 301; i++ {
 		pins = append(pins, resources.Pin(strconv.Itoa(i)))
@@ -21,7 +23,13 @@ func handleFeedCall(p resources.PinsInterface) (feed []*models.Pin, err error) {
 	rand.Shuffle(len(pins), func(i, j int) {
 		pins[i], pins[j] = pins[j], pins[i]
 	})
-	p.Concatenate(pins)
+
+	var pinAmount int
+	pinAmount, err = strconv.Atoi(params.PinAmount)
+	if err != nil {
+		return
+	}
+	p.Concatenate(pins[:pinAmount])
 	feed, err = p.BatchGet()
 	return
 }
