# restapi/operations/pinterest/delete_pin.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package pinterest
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	middleware "github.com/go-openapi/runtime/middleware"
+)
+
+// DeletePinHandlerFunc turns a function with the right signature into a delete pin handler
+type DeletePinHandlerFunc func(DeletePinParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn DeletePinHandlerFunc) Handle(params DeletePinParams) middleware.Responder {
+	return fn(params)
+}
+
+// DeletePinHandler interface for that can handle valid delete pin params
+type DeletePinHandler interface {
+	Handle(DeletePinParams) middleware.Responder
+}
+
+// NewDeletePin creates a new http.Handler for the delete pin operation
+func NewDeletePin(ctx *middleware.Context, handler DeletePinHandler) *DeletePin {
+	return &DeletePin{Context: ctx, Handler: handler}
+}
+
+/*DeletePin swagger:route GET /delete_pin pinterest deletePin
+
+DeletePin delete pin API
+
+*/
+type DeletePin struct {
+	Context *middleware.Context
+	Handler DeletePinHandler
+}
+
+func (o *DeletePin) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewDeletePinParams()
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
